Making progress on cors create request; documenting timeseries format

--- a/create.html
+++ b/create.html
@@ -7,6 +7,15 @@
     </head>
 <body>
 
+<p>Make a new stream
+<form id="create-form">
+    <p>
+    <input type="text" name="streamName" size="40" placeholder="Name of the stream">
+    <p>
+    <input type="submit" value="Create">
+</form>
+
+<div id="snippet"></div>
 
 <script src="create.js"></script>
 </body>
