Trying to make a client demo to post messages to the stream

--- a/client_demo.html
+++ b/client_demo.html
@@ -7,5 +7,16 @@
     </head>
 <body>
 
+<p>Send a random data point
+<form id="send-form">
+    <p>
+    <input type="text" name="channelId" size="40" placeholder="ID of the channel to send data to">
+    <p>
+    <input type="submit" value="Send">
+</form>
+
+<div id="data-points"></div>
+
+<script src="client.js"></script>
 </body>
 </html>
