Writing out messages in client; fixed create page

--- a/create.html
+++ b/create.html
@@ -15,7 +15,7 @@
 
 <div id="snippet"></div>
 
-<scirpt src="auth.js"></script>
+<script src="auth.js"></script>
 <script src="create.js"></script>
 </body>
 </html>
