View button working in client demo

--- a/client_demo.html
+++ b/client_demo.html
@@ -7,12 +7,13 @@
     </head>
 <body>
 
-<p>Send a random data point
+<p>Random data points
 <form id="send-form">
     <p>
     <input type="text" name="channelId" size="40" placeholder="ID of the channel to send data to">
     <p>
-    <input type="submit" value="Send">
+    <input type="submit" value="Send one" id="send-button">
+    <input type="submit" value="View all" id="view-button">
 </form>
 
 <div id="data-points"></div>
