--- a/client_demo.html
+++ b/client_demo.html
@@ -10,7 +10,7 @@
 <p>Random data points
 <form id="send-form">
     <p>
-    <input type="text" name="channelId" size="40" placeholder="ID of the channel to send data to">
+    <input type="text" name="channelId" size="40" placeholder="ID of the channel to send data to" id="channel-id">
     <p>
     <input type="submit" value="Send one" id="send-button">
     <input type="submit" value="View all" id="view-button">
