Clarified its a channel not a stream

--- a/create.html
+++ b/create.html
@@ -7,7 +7,7 @@
     </head>
 <body>
 
-<p>Make a new stream
+<p>Make a new channel
 <form id="create-form">
     <p>
     <input type="submit" value="Create">
