--- a/create.html
+++ b/create.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Create a stream</title>
+        <title>Create a channel</title>
         <script src="jquery-1.9.1.min.js"></script>
     </head>
 <body>
