--- a/client_demo.html
+++ b/client_demo.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Client library demo</title>
+        <title>Client demo</title>
         <script src="jquery-1.9.1.min.js"></script>
     </head>
 <body>
