Split out client JS

--- a/client_demo.html
+++ b/client_demo.html
@@ -19,6 +19,7 @@
 <div id="data-points"></div>
 
 <script src="auth.js"></script>
+<script src="client.js"></script>
 <script src="client_demo.js"></script>
 </body>
 </html>
