Cleaning up script src style

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Heartbeat App</title>
-        <script src="jquery-1.9.1.min.js"></script>
     </head>
+    <script src="jquery-1.9.1.min.js"></script>
+    <script src="d3.min.js"></script>
+    <script src="client.js"></script>
+    <script src="heartbeat.js"></script>
 <body>
 
 <h1>Heartbeat</h1>
@@ -13,7 +16,5 @@
 Demo page: Shows the number of users who are viewing this page at the same time as you.
 </p>
 
-<script src="client.js"></script>
-<script src="heartbeat.js"></script>
 </body>
 </html>
