consumer sort of working with polling
- use auth.js
- pass the right parameters for include_*

--- a/consumer_demo.html
+++ b/consumer_demo.html
@@ -11,9 +11,9 @@
 
 <form id="send-form">
     <p>
-    <input type="text" name="appToken" size="40"
+    <!--<input type="text" name="appToken" size="40"
            placeholder="Application Token">
-    <p>
+    <p>-->
     <input type="text" name="channelId" size="40"
            placeholder="ID of the channel to consume">
     <p>
@@ -22,6 +22,7 @@
 
 <div id="data-points"></div>
 
+<script src="auth.js"></script>
 <script src="consumer.js"></script>
 </body>
 </html>
