--- a/consumer_demo.html
+++ b/consumer_demo.html
@@ -4,8 +4,10 @@
         <meta charset="utf-8">
         <title>Consumer demo</title>
         <script src="jquery-1.9.1.min.js"></script>
+        <script src="aggregator.js"></script>
         <script src="auth.js"></script>
         <script src="consumer.js"></script>
+        <script src="consumer_demo.js"></script>
     </head>
 <body>
 
