include d3 script tag

--- a/consumer_demo.html
+++ b/consumer_demo.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Consumer demo</title>
+        <script src="d3.js"></script>
         <script src="jquery-1.9.1.min.js"></script>
         <script src="aggregator.js"></script>
         <script src="auth.js"></script>
