Updating schema on heartbeat page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <script src="jquery-1.9.1.min.js"></script>
     <script src="client.js"></script>
-    <script src="heartbeat.js"></script>
+    <script src="index.js"></script>
 <body>
 
 <h1>Heartbeat</h1>
