--- a/consumer_demo.html
+++ b/consumer_demo.html
@@ -12,6 +12,14 @@
         <script src="auth.js"></script>
         <script src="consumer.js"></script>
         <script src="consumer_demo.js"></script>
+
+        <style>
+          rect {
+            fill: red;
+            stroke: white;
+            shape-rendering: crispEdges;
+          }
+        </style>
     </head>
 <body>
 
