--- a/index.html
+++ b/index.html
@@ -2,18 +2,37 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Heartbeat App</title>
+        <title>Consumer demo</title>
+
+        <script src="d3.min.js"></script>
+        <script src="jquery-1.9.1.min.js"></script>
+        <script src="underscore.js"></script>
+
+        <script src="aggregator.js"></script>
+        <script src="auth.js"></script>
+        <script src="client.js"></script>
+        <script src="consumer.js"></script>
+        <script src="consumer_demo.js"></script>
+        <script src="index.js"></script>
+
+        <style>
+          rect {
+            fill: red;
+            stroke: white;
+            shape-rendering: crispEdges;
+          }
+        </style>
     </head>
-    <script src="jquery-1.9.1.min.js"></script>
-    <script src="client.js"></script>
-    <script src="index.js"></script>
 <body>
 
-<h1>Heartbeat</h1>
+<h1>How many people are looking at this page?</h1>
 
 <p>
-Demo page: Shows the number of users who are viewing this page at the same time as you.
+This graphs the number of users actively looking at this page. It's powered through the app.net API by writing heartbeat messages into a channel.
 </p>
 
+<div id="count"></div>
+
+<svg id="graph"></svg>
 </body>
 </html>
