Link back to the github page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <h1>How many people are looking at this page?</h1>
 
 <p>
-This graphs the number of users actively looking at this page. It's powered through the app.net API by writing heartbeat messages into a channel.
+This graphs the number of users actively looking at this page. It's powered through the app.net API by writing heartbeat messages into a channel. <a href="http://github.com/bslatkin/heartbeat">View the project on github</a>
 </p>
 
 <div id="count"></div>
